# nereid-server

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  docs-requirements.txt  mkdocs.yml  nereid.yaml  nereid.yaml.example
.cargo/: config.toml
.github/workflows/: docs.yml  rust.yml
crates/cxx-models/: Cargo.toml  build.rs
crates/cxx-models/cpp/: models.cpp  models.h
crates/cxx-models/src/: lib.rs
docs/: architecture.md  backends.md  building.md  index.html  index.md  model-contract.md  triton.md
ml-backends/cppadd/: main.cpp
ml-backends/model1/: main.py  model_inference.textproto
ml-backends/model2/: main.py
ml-backends/model3/: mlp.pt  model_inference.textproto
ml-backends/multi/: mmodel.pt  model_inference.textproto
ml-backends/onnxadd/: model.onnx  model_inference.textproto
ml-backends/pyaddint/: main.py  model_inference.textproto
ml-backends/pymul/: main.py  model_inference.textproto
ml-backends/rustint/: model_inference.textproto  rmodel.pt
ml-backends/tfadd/: fingerprint.pb  saved_model.pb
proto/: grpc_service.proto  helloworld.proto  inference.proto
python-client/: README.md  client.py  client.yaml.example  conda_env.yml  requirements.txt
scripts/: EDproducer.py  build-libtorch.sh  check_backend_docs.sh  make_example_models.py  requirements.txt  spawn_edproducers.py  test_run_forward_pass_determinism.sh  triton_compat_check.py
src/: config.rs  dtype.rs  inference.rs  main.rs  model_runtime.rs  native_backend.rs  python_backend.rs  triton.rs
src/backend/: contract.rs  mod.rs  native_common.rs  onnx.rs  python.rs  tensorflow.rs  torch.rs
src/backends/: mod.rs
src/backends/cpp/: imp.rs  mod.rs  subprocess.rs
src/backends/cxx/: imp.rs  mod.rs
src/backends/onnx/: imp.rs  mod.rs
src/backends/python/: imp.rs  mod.rs
src/backends/tensorflow/: imp.rs  mod.rs
src/backends/torch/: imp.rs  mod.rs
