[package]
name = "grpc-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
tch = { version = "0.18.1", features = ["download-libtorch"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tonic-prost-build = "*"
