[package]
name = "grpc-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Link-time backend registry: each backend `submit!`s itself so the core never
# enumerates them (no central enum or match). See `backend::registry`.
inventory = "0.3"

# Every inference backend is optional and selected by a Cargo feature, so you
# build only the ones you want (see `[features]`). `tch` links libtorch for the
# TorchScript `.pt` backend; `ort` links ONNX Runtime; `tensorflow` links
# libtensorflow. The Python backend has no extra crate dependency.
tch = { version = "0.18.1", features = ["download-libtorch"], optional = true }
ort = { version = "2.0.0-rc.12", optional = true, features = ["cuda", "half"] }
tensorflow = { version = "0.21.0", optional = true }
# 2-byte float element types (FP16/BF16) for the native backends.
half = { version = "2", optional = true }

[features]
# Default build keeps the two original backends (TorchScript `.pt` + Python) for
# backward compatibility. Build a leaner binary with `--no-default-features` plus
# only the backends you want, e.g. `--no-default-features --features onnx` for an
# ONNX-only server that never links libtorch.
default = ["torch", "python"]
# The TorchScript `.pt` backend (links libtorch via `tch`).
torch = ["dep:tch"]
# The Python `main.py` backend (no extra crate dependency).
python = []
# ONNX backend (ort / ONNX Runtime; CUDA execution provider compiled in, selected
# at runtime when a model's device is `cuda`).
onnx = ["dep:ort", "dep:half"]
# TensorFlow SavedModel backend (libtensorflow).
tensorflow = ["dep:tensorflow", "dep:half"]
# TensorFlow linked against the libtensorflow GPU build.
tensorflow-gpu = ["tensorflow", "tensorflow/tensorflow_gpu"]

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tonic-prost-build = "*"

[dev-dependencies]
tokio = { version = "1.0", features = ["net"] }
tokio-stream = { version = "0.1", features = ["net"] }
